Ajout du menu palette

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
             <h2>
                 Restaurants
             </h2>
-            <div class="sectionbottom__firstcard ">
+            <a href="./public/html/menupalette.html" class="sectionbottom__firstcard ">
                 <div class="image"><span>Nouveau</span></div>
                 <h3>La palette du goût</h3>
                 <p>Ménilmontant</p>
                 <i class="fa-regular fa-heart"></i>
-            </div>
+            </a>
             <div class="sectionbottom__secondcard ">
                 <div class="image"><span>Nouveau</span></div>
                 <h3>La note enchantée</h3>
