--- a/public/html/menupalette.html
+++ b/public/html/menupalette.html
@@ -18,27 +18,27 @@
     </header>
     <main>
 
-        <h2>À la française<i class="fa-regular fa-heart utensils"></i></h2>
+        <h2>La palette du goût<i class="fa-regular fa-heart utensils"></i></h2>
 
         <section>
             <div class="title"><span>
                     ENTR</span>ÉES</div>
             <div class="plats">
                 <div class="plat">
-                    <h3>Tartare de poulpe acidulé</h3>
-                    <p>Aux zests d'orange <span>25€</span></p>
+                    <h3>Fricassée d'escargot</h3>
+                    <p>Au piment d'espelette<span>25€</span></p>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
-                    <h3>Velouté de légumes d'antan</h3>
-                    <p>Carotte, panais, topinambour <span>35€</span></p>
+                    <h3>Foie gras de canard mi-cuit</h3>
+                    <p>Et ses copeaux de truffe noire<span>35€</span></p>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
-                    <h3>Soupe à l'oignon</h3>
-                    <p>Revisitée<span>20€</span></p>
+                    <h3>Oeuf au plat</h3>
+                    <p>Assaisonné à la truffe sur lit de....<span>20€</span></p>
                 </div>
             </div>
         </section>
@@ -47,20 +47,20 @@
                     PLAT</span>S</div>
             <div class="plats">
                 <div class="plat">
-                    <h3>Coquilles Saint-Jacques</h3>
-                    <p>Accompagnées d'une purée de panais <span>40€</span></p>
+                    <h3>Filet de boeuf aux herbes</h3>
+                    <p>Accompagnées de sa ribambelle de légu...<span>40€</span></p>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
-                    <h3>Magret de canard</h3>
-                    <p>Et parmentier de pommes de terres<span>35€</span></p>
+                    <h3>Parmentier de queue de boeuf</h3>
+                    <p>À la truffe noire sur sa purée de panais<span>35€</span></p>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                    <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
+                    <h3>Filet de Turbot</h3>
+                    <p>Aux agrumes<span>44€</span></p>
                 </div>
             </div>
         </section>
@@ -69,20 +69,20 @@
                     DESS</span>ERTS</div>
             <div class="plats">
                 <div class="plat">
-                    <h3>Pétales de violettes glacés</h3>
-                    <p>Et purée de noisettes<span>18€</span></p>
+                    <h3>Paris-Brest</h3>
+                    <p>Revisité<span>18€</span></p>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
-                    <h3>Fondant au chocolat</h3>
-                    <p>Revisité<span>22€</span></p>
+                    <h3>Macaron au chocolat d'exception</h3>
+                    <p>Et glace à la vanille de Madagascar<span>22€</span></p>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
-                    <h3>Millefeuille crousillant</h3>
-                    <p>Myrtilles et pâte d'amande<span>23€</span></p>
+                    <h3>Mousse au chocolat</h3>
+                    <p>Au piment d'espelette et à la truffe noire<span>23€</span></p>
                 </div>
             </div>
         </section>
