modification avant ajout animations

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
                 <div class="image"><span>Nouveau</span></div>
                 <h3>La note enchantée</h3>
                 <p>Charonne</p>
-                <i class="fa-solid fa-heart iconheart"></i>
-                <i class="fa-regular fa-hand-pointer iconpointer"></i>
+                <i class="fa-regular fa-heart"></i>
             </div>
             <a href="./public/html/menuf.html" class="sectionbottom__thirdcard ">
                 <div class="image"></div>
