--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@
             <h2>
                 Restaurants
             </h2>
-            <a href="./public/html/menupalette.html" class="sectionbottom__firstcard ">
+            <a href="./public/html/menupalette.html" class="sectionbottom__firstcard sectionbottom__cards ">
                 <div class="image"><span>Nouveau</span></div>
                 <h3>La palette du goût</h3>
                 <p>Ménilmontant</p>
                 <i class="fa-regular fa-heart"></i>
             </a>
-            <div class="sectionbottom__secondcard ">
+            <div class="sectionbottom__secondcard sectionbottom__cards ">
                 <div class="image"><span>Nouveau</span></div>
                 <h3>La note enchantée</h3>
                 <p>Charonne</p>
                 <i class="fa-regular fa-heart"></i>
             </div>
-            <a href="./public/html/menuf.html" class="sectionbottom__thirdcard ">
+            <a href="./public/html/menuf.html" class="sectionbottom__thirdcard sectionbottom__cards ">
                 <div class="image"></div>
                 <h3>À la française</h3>
                 <p>Cité Rouge</p>
                 <i class="fa-regular fa-heart"></i>
             </a>
-            <div class="sectionbottom__fourthcard ">
+            <div class="sectionbottom__fourthcard sectionbottom__cards ">
                 <div class="image"></div>
                 <h3>Le délice des sens</h3>
                 <p>Folie-Méricourt</p>
