--- a/public/html/menuf.html
+++ b/public/html/menuf.html
@@ -23,66 +23,75 @@
         <section>
             <div class="title"><span>
                     ENTR</span>ÉES</div>
-            <div class="plats">
+            <div class="plats" id="plat1">
                 <div class="plat">
                     <h3>Tartare de poulpe acidulé</h3>
                     <p>Aux zests d'orange <span>25€</span></p>
+                    <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat2">
                 <div class="plat">
                     <h3>Velouté de légumes d'antan</h3>
                     <p>Carotte, panais, topinambour <span>35€</span></p>
+                    <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat3">
                 <div class="plat">
                     <h3>Soupe à l'oignon</h3>
                     <p>Revisitée<span>20€</span></p>
+                    <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
         </section>
         <section>
             <div class="title"><span>
                     PLAT</span>S</div>
-            <div class="plats">
+            <div class="plats" id="plat4">
                 <div class="plat">
                     <h3>Coquilles Saint-Jacques</h3>
                     <p>Accompagnées d'une purée de panais <span>40€</span></p>
+                    <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat5">
                 <div class="plat">
                     <h3>Magret de canard</h3>
                     <p>Et parmentier de pommes de terres<span>35€</span></p>
+                    <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat6">
                 <div class="plat">
                     <h3>Pigeonneau d'Ille-et-Vilaine</h3>
                     <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
+                    <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
         </section>
         <section>
             <div class="title"><span>
                     DESS</span>ERTS</div>
-            <div class="plats">
+            <div class="plats" id="plat7">
                 <div class="plat">
                     <h3>Pétales de violettes glacés</h3>
                     <p>Et purée de noisettes<span>18€</span></p>
+                    <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat8">
                 <div class="plat">
                     <h3>Fondant au chocolat</h3>
                     <p>Revisité<span>22€</span></p>
+                    <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat9">
                 <div class="plat">
                     <h3>Millefeuille crousillant</h3>
                     <p>Myrtilles et pâte d'amande<span>23€</span></p>
+                    <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
         </section>
