Travail sans l'animation ellipsis

--- a/public/html/menuf.html
+++ b/public/html/menuf.html
@@ -26,7 +26,10 @@
             <div class="plats" id="plat1">
                 <div class="plat">
                     <h3>Tartare de poulpe acidulé</h3>
-                    <p>Aux zests d'orange <span>25€</span></p>
+                    <div class="description">
+                        <p>Aux zests d'orangeeeeeeeeeeeeeeeeeeeeeee</p>
+                        <div class="price">25€</div>
+                    </div>
                     <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
