Animation menus terminée

--- a/public/html/menuf.html
+++ b/public/html/menuf.html
@@ -27,7 +27,7 @@
                 <div class="plat">
                     <h3>Tartare de poulpe acidulé</h3>
                     <div class="description">
-                        <p>Aux zests d'orangeeeeeeeeeeeeeeeeeeeeeee</p>
+                        <p>Aux zests d'orange</p>
                         <div class="price">25€</div>
                     </div>
                     <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
@@ -36,14 +36,20 @@
             <div class="plats" id="plat2">
                 <div class="plat">
                     <h3>Velouté de légumes d'antan</h3>
-                    <p>Carotte, panais, topinambour <span>35€</span></p>
+                    <div class="description">
+                        <p>Carotte, panais, topinambour</p>
+                        <div class="price">35€</div>
+                    </div>
                     <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
             <div class="plats" id="plat3">
                 <div class="plat">
                     <h3>Soupe à l'oignon</h3>
-                    <p>Revisitée<span>20€</span></p>
+                    <div class="description">
+                        <p>Revisitée</p>
+                        <div class="price">20€</div>
+                    </div>
                     <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
@@ -54,21 +60,30 @@
             <div class="plats" id="plat4">
                 <div class="plat">
                     <h3>Coquilles Saint-Jacques</h3>
-                    <p>Accompagnées d'une purée de panais <span>40€</span></p>
+                    <div class="description">
+                        <p>Accompagnées d'une purée de panais</p>
+                        <div class="price">40€</div>
+                    </div>
                     <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
             <div class="plats" id="plat5">
                 <div class="plat">
                     <h3>Magret de canard</h3>
-                    <p>Et parmentier de pommes de terres<span>35€</span></p>
+                    <div class="description">
+                        <p>Et parmentier de pommes de terres</p>
+                        <div class="price">35€</div>
+                    </div>
                     <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
             <div class="plats" id="plat6">
                 <div class="plat">
                     <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                    <p>Sur son lit de gnocchis aux légumes<span>44€</span></p>
+                    <div class="description">
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <div class="price">44€</div>
+                    </div>
                     <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
@@ -79,21 +94,30 @@
             <div class="plats" id="plat7">
                 <div class="plat">
                     <h3>Pétales de violettes glacés</h3>
-                    <p>Et purée de noisettes<span>18€</span></p>
+                    <div class="description">
+                        <p>Et purée de noisettes</p>
+                        <div class="price">18€</div>
+                    </div>
                     <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
             <div class="plats" id="plat8">
                 <div class="plat">
                     <h3>Fondant au chocolat</h3>
-                    <p>Revisité<span>22€</span></p>
+                    <div class="description">
+                        <p>Revisité</p>
+                        <div class="price">22€</div>
+                    </div>
                     <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
             <div class="plats" id="plat9">
                 <div class="plat">
                     <h3>Millefeuille crousillant</h3>
-                    <p>Myrtilles et pâte d'amande<span>23€</span></p>
+                    <div class="description">
+                        <p>Myrtilles et pâte d'amande</p>
+                        <div class="price">23€</div>
+                    </div>
                     <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
                 </div>
             </div>
