liens entre les menus HTML et menus.css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h2>
                 Restaurants
             </h2>
-            <a href="./public/html/menupalette.html" class="sectionbottom__firstcard sectionbottom__cards ">
+            <a href="./public/html/lapalette.html" class="sectionbottom__firstcard sectionbottom__cards ">
                 <div class="image"><span>Nouveau</span></div>
                 <h3>La palette du goût</h3>
                 <p>Ménilmontant</p>
@@ -75,7 +75,7 @@
                 <p>Charonne</p>
                 <i class="fa-regular fa-heart"></i>
             </div>
-            <a href="./public/html/menuf.html" class="sectionbottom__thirdcard sectionbottom__cards ">
+            <a href="./public/html/alafrançaise.html" class="sectionbottom__thirdcard sectionbottom__cards ">
                 <div class="image"></div>
                 <h3>À la française</h3>
                 <p>Cité Rouge</p>
