--- a/public/html/alafrançaise.html
+++ b/public/html/alafrançaise.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <script src="https://kit.fontawesome.com/344bf04111.js" crossorigin="anonymous"></script>
-    <link href="../css/menuf.css" rel="stylesheet">
+    <link href="../css/menus.css" rel="stylesheet">
 </head>
 
 <body>
