--- a/public/html/lapalette.html
+++ b/public/html/lapalette.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ohmyfood</title>
     <script src="https://kit.fontawesome.com/344bf04111.js" crossorigin="anonymous"></script>
-    <link href="../css/menupalette.css" rel="stylesheet">
+    <link href="../css/menus.css" rel="stylesheet">
 </head>
 
 <body>
@@ -26,19 +26,31 @@
             <div class="plats">
                 <div class="plat">
                     <h3>Fricassée d'escargot</h3>
-                    <p>Au piment d'espelette<span>25€</span></p>
+                    <div class="description">
+                        <p>Au piment d'espelette</p>
+                        <div class="price">25€</div>
+                        <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
+                    </div>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
                     <h3>Foie gras de canard mi-cuit</h3>
-                    <p>Et ses copeaux de truffe noire<span>35€</span></p>
+                    <div class="description">
+                        <p>Et ses copeaux de truffe noire</p>
+                        <div class="price">35€</div>
+                        <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
+                    </div>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
                     <h3>Oeuf au plat</h3>
-                    <p>Assaisonné à la truffe sur lit de....<span>20€</span></p>
+                    <div class="description">
+                        <p>Assaisonné à la truffe sur lit de courgettes</p>
+                        <div class="price">20€</div>
+                        <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -48,19 +60,31 @@
             <div class="plats">
                 <div class="plat">
                     <h3>Filet de boeuf aux herbes</h3>
-                    <p>Accompagnées de sa ribambelle de légu...<span>40€</span></p>
+                    <div class="description">
+                        <p>Accompagnées de sa ribambelle de légumes</p>
+                        <div class="price">40€</div>
+                        <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
+                    </div>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
                     <h3>Parmentier de queue de boeuf</h3>
-                    <p>À la truffe noire sur sa purée de panais<span>35€</span></p>
+                    <div class="description">
+                        <p>À la truffe noire sur sa purée de panais</p>
+                        <div class="price">35€</div>
+                        <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
+                    </div>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
                     <h3>Filet de Turbot</h3>
-                    <p>Aux agrumes<span>44€</span></p>
+                    <div class="description">
+                        <p>Aux agrumes</p>
+                        <div class="price">44€</div>
+                        <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -70,19 +94,31 @@
             <div class="plats">
                 <div class="plat">
                     <h3>Paris-Brest</h3>
-                    <p>Revisité<span>18€</span></p>
+                    <div class="description">
+                        <p>Revisité</p>
+                        <div class="price">18€</div>
+                        <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
+                    </div>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
                     <h3>Macaron au chocolat d'exception</h3>
-                    <p>Et glace à la vanille de Madagascar<span>22€</span></p>
+                    <div class="description">
+                        <p>Et glace à la vanille de Madagascar</p>
+                        <div class="price">22€</div>
+                        <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
+                    </div>
                 </div>
             </div>
             <div class="plats">
                 <div class="plat">
                     <h3>Mousse au chocolat</h3>
-                    <p>Au piment d'espelette et à la truffe noire<span>23€</span></p>
+                    <div class="description">
+                        <p>Au piment d'espelette et à la truffe noire</p>
+                        <div class="price">23€</div>
+                        <div class="anim"> <i class="fa-solid fa-circle-check"></i> </div>
+                    </div>
                 </div>
             </div>
         </section>
