Ajout menu lanote.html

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                 <p>Ménilmontant</p>
                 <i class="fa-regular fa-heart"></i>
             </a>
-            <div class="sectionbottom__secondcard sectionbottom__cards ">
+            <a href="./public/html/lanote.html" class="sectionbottom__secondcard sectionbottom__cards ">
                 <div class="image"><span>Nouveau</span></div>
                 <h3>La note enchantée</h3>
                 <p>Charonne</p>
                 <i class="fa-regular fa-heart"></i>
-            </div>
+            </a>
             <a href="./public/html/alafrançaise.html" class="sectionbottom__thirdcard sectionbottom__cards ">
                 <div class="image"></div>
                 <h3>À la française</h3>
