--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                 <p>Cité Rouge</p>
                 <i class="fa-regular fa-heart"></i>
             </a>
-            <div class="sectionbottom__fourthcard sectionbottom__cards ">
+            <a href="./public/html/ledelice.html" class="sectionbottom__fourthcard sectionbottom__cards ">
                 <div class="image"></div>
                 <h3>Le délice des sens</h3>
                 <p>Folie-Méricourt</p>
                 <i class="fa-regular fa-heart"></i>
-            </div>
+            </a>
 
         </section>
     </main>
