Ajout animation coeur accueil

--- a/index.html
+++ b/index.html
@@ -67,25 +67,37 @@
                 <div class="image"><span>Nouveau</span></div>
                 <h3>La palette du goût</h3>
                 <p>Ménilmontant</p>
-                <i class="fa-regular fa-heart"></i>
+                <div class="hearts">
+                    <i class="emptyheart fa-regular fa-heart"></i>
+                    <i class="fullheart fa-solid fa-heart"></i>
+                </div>
             </a>
             <a href="./public/html/lanote.html" class="sectionbottom__secondcard sectionbottom__cards ">
                 <div class="image"><span>Nouveau</span></div>
                 <h3>La note enchantée</h3>
                 <p>Charonne</p>
-                <i class="fa-regular fa-heart"></i>
+                <div class="hearts">
+                    <i class="emptyheart fa-regular fa-heart"></i>
+                    <i class="fullheart fa-solid fa-heart"></i>
+                </div>
             </a>
             <a href="./public/html/alafrançaise.html" class="sectionbottom__thirdcard sectionbottom__cards ">
                 <div class="image"></div>
                 <h3>À la française</h3>
                 <p>Cité Rouge</p>
-                <i class="fa-regular fa-heart"></i>
+                <div class="hearts">
+                    <i class="emptyheart fa-regular fa-heart"></i>
+                    <i class="fullheart fa-solid fa-heart"></i>
+                </div>
             </a>
             <a href="./public/html/ledelice.html" class="sectionbottom__fourthcard sectionbottom__cards ">
                 <div class="image"></div>
                 <h3>Le délice des sens</h3>
                 <p>Folie-Méricourt</p>
-                <i class="fa-regular fa-heart"></i>
+                <div class="hearts">
+                    <i class="emptyheart fa-regular fa-heart"></i>
+                    <i class="fullheart fa-solid fa-heart"></i>
+                </div>
             </a>
 
         </section>
