Correction animation des menus

--- a/public/html/ledelice.html
+++ b/public/html/ledelice.html
@@ -23,7 +23,7 @@
         <section>
             <div class="title"><span>
                     ENTR</span>ÉES</div>
-            <div class="plats">
+            <div class="plats" id="plat1">
                 <div class="plat">
                     <h3>Tartare de thon</h3>
                     <div class="description">
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat2">
                 <div class="plat">
                     <h3>Bouchée de homard croustillant</h3>
                     <div class="description">
@@ -43,7 +43,7 @@
                     </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat3">
                 <div class="plat">
                     <h3>Velouté de cèpes</h3>
                     <div class="description">
@@ -57,7 +57,7 @@
         <section>
             <div class="title"><span>
                     PLAT</span>S</div>
-            <div class="plats">
+            <div class="plats" id="plat4">
                 <div class="plat">
                     <h3>Poulet rôti aux herbes de provence</h3>
                     <div class="description">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat5">
                 <div class="plat">
                     <h3>Langouste rôtie</h3>
                     <div class="description">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat6">
                 <div class="plat">
                     <h3>Côte de boeuf angus</h3>
                     <div class="description">
@@ -91,7 +91,7 @@
         <section>
             <div class="title"><span>
                     DESS</span>ERTS</div>
-            <div class="plats">
+            <div class="plats" id="plat7">
                 <div class="plat">
                     <h3>Farandole de desserts</h3>
                     <div class="description">
@@ -101,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat8">
                 <div class="plat">
                     <h3>Crème brulée</h3>
                     <div class="description">
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <div class="plats">
+            <div class="plats" id="plat9">
                 <div class="plat">
                     <h3>Tiramisu</h3>
                     <div class="description">
